# mathematica_laguerre

./: .gitignore  CMakeLists.txt  LG.m  LG.wl  Laguerre.cpp  Laguerre.h  lg.cpp  lg.tm  test_cmake.cpp  test_main.cpp
armadillo/include/armadillo_bits/: config.hpp
include/: Laguerre.h
src/: CMakeLists.txt  Laguerre.cpp  lg.cpp  lg.tm  test_main.cpp
